# web-search-mcp

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GRAFANA-SETUP-GUIDE.md  IMPLEMENTATION-TODO.md  LICENSE  OBSERVABILITY-ENHANCEMENT-PLAN.md  PIPELINE-ANALYSIS-REPORT.md  README.md  RESEARCH-ML-NLP-SYNTHESIS.md  functiongemma-service-details.md  grafana-mcp.bat  grafana-mcp.ps1  pyproject.toml  repo-research-summary.md  requirements.txt  research-findings.md  server.py  start_mcp_stdio.bat  test_detailed_diagnostic.py  test_functiongemma.py  test_gemini_models.py  test_gemini_working_models.py  test_mcp_providers.py  test_pipeline_inspection.py  test_s2_direct.py  test_smoke.py  test_telemetry_setup.py
.playwright-mcp/: page-2026-05-28T20-42-23-922Z.yml
docs/: API.md  ARCHITECTURE.md  COMPOSIO-SEARCH-OBSERVED-FINDINGS.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPMENT.md  GETTING-STARTED.md  MCP_EVALUATION_AND_RECOMMENDATIONS.md  OBSERVABILITY-DESIGN.md  OBSERVABILITY.md  TESTING.md
grafana/: README.md
grafana_reports/: 2026-05-14-mcp-health-report.md
plans/: FASTMCP-IMPROVEMENTS-REFINED.md  GraphQL-tuning.md  content-extraction-entity-schema-oss-patterns-2026-06-01.md  general research.txt  query-reformulation-implementation-plan-2026-05-12.md  query-reformulation-production-rules-analysis-2026-05-12.md  query-rewrite-agentic-provider-aware-plan-2026-05-13.md  search-depth-modes-recursive-research-entity-extraction.md
scripts/: live_model_benchmark.py  live_web_search_load_test.py  live_web_search_probe_lib.py  script_run_mcp_tools.py
searxng-settings/: README.md  docker-compose.yml  start-searxng.bat
tests/: conftest.py  test_agent_steering_middleware.py  test_arxiv.py  (+49 more)
(+188 files in other folders)
