[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kindly-web-search-mcp-server"
version = "0.1.8"
description = "MCP server: Multi-provider web search (SearXNG/Tavily/Brave/Jina) with RRF merge."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic",
    "httpx",
    "beautifulsoup4",
    "composio",
    "markdownify",
    "trafilatura",
    "html2text>=2024.2.26",
    "nodriver",
    "PyMuPDF",
    "lancedb>=0.25.0",
    "pyarrow>=18.0.0",
    "numpy>=1.26.0",
    "google-genai>=0.3.0",
    "python-dotenv>=1.0.0",
    "mistralai>=1.8.0",
    "gradio_client>=1.10.1",
    "huggingface_hub>=1.0.0",
    "youtube-transcript-api>=0.6.0",
    "duckduckgo-search>=6.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
pdf-advanced = [
    "pymupdf-layout>=1.26.6; python_version < '3.14'",
    "pymupdf4llm>=0.2.7; python_version < '3.14'",
]
observability = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "opentelemetry-distro[otlp]>=0.40.0",
    "opentelemetry-exporter-prometheus>=0.40.0",
    "prometheus-client>=0.20.0",
    "opentelemetry-instrumentation-httpx>=0.40b0",
    "opentelemetry-instrumentation-logging>=0.40b0",
]

[project.scripts]
mcp-server = "kindly_web_search_mcp_server.server:main"
mcp-web-search = "kindly_web_search_mcp_server.server:main"
kindly-web-search = "kindly_web_search_mcp_server.server:main"
kindly-web-search-mcp-server = "kindly_web_search_mcp_server.cli:main"

[tool.hatch.build.targets.wheel.sources]
src = ""
